@@ -2251,6 +2251,7 @@ void CDownloadListCtrl::PreviewFile(CPartFile* file)
 	// We can't use wxShell here, it blocks the app
 	CTerminationProcess *p = new CTerminationProcess(command);
 	if (!wxExecute(command, wxEXEC_ASYNC, p)) {
+		delete p;
 		AddLogLineM( true, _("ERROR: Failed to execute external media-player!") );
 		AddLogLineM( false, CFormat( _("Command: %s") ) % command );
 	}
